# nginx-jwt

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  compose.yml
.github/workflows/: release.yml  test.yml
assets/: 403.html  Dockerfile  entrypoint.sh  index.html  login.html  test.conf.template
src/: lib.rs
tests/: e2e.rs
